TMUX: Configuro el cambio de C-b por C-a

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,11 @@
 ######################
 ### DESIGN CHANGES ###
 ######################
+### Cambiar a prefix C-a ###
+#set -g prefix C-a
+#unbind-key C-b
+#bind-key C-a send-prefix
+### end Cambiar a prefix C-a ###
 set-option -g history-limit 5000
 #NEOVIM?
 set-option -sg escape-time 10
